# candle-dreamgaussian

./: .gitignore  Cargo.toml  a.out  readme.md  test.cpp
src/: array_utils.rs  cam_utils.rs  cli.rs  grid_put.rs  gs_renderer.rs  main.rs  main2.rs  mesh.rs  mesh_utils.rs  ply_mesh.rs  process.rs  sh_utils.rs
